# Django-proj-structure

./: .editorconfig  .flake8  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
core/: manage.py
core/core/utils/: collections.py  custom_collections.py  misc.py  settings.py
core/project/: mypy.ini  urls.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py
